<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_connect"
        android:title="@string/log_ac_connect"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_parameter"
        android:enabled="true"
        android:title="@string/log_ac_parameter"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_disconnect"
        android:title="@string/log_ac_disconnect"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_clear"
        android:title="@string/log_ac_clear_log"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_get_num_rev_audio"
        android:title="Get received audio byte"
        app:showAsAction="never"/>

</menu>
